--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -15,6 +15,7 @@
             <ul class="nav navbar-nav">
                 <li routerLinkActive='actives'><a routerLink='/home'>Home</a></li>
                 <li routerLinkActive='actives'><a routerLink="/primeng">primeng</a></li>
+                <li routerLinkActive='actives'><a routerLink="/toolbar">工具栏</a></li>
                 <!-- <li><a href="#contact">Contact</a></li> -->
                 <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -39,5 +40,5 @@
 </nav>
 
 <div class="container top">
-   <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
