--- a/project/src/app/primeng/primeng.component.html
+++ b/project/src/app/primeng/primeng.component.html
@@ -1,3 +1,60 @@
-<p>
-  primeng works!
-</p>
+<!-- 测试scss用法 -->
+<!-- <h1 class="title-one">this is title one.</h1>
+<h1 class="title-two">this is title two.</h1>
+<h1 class="title-three">this is title three.</h1>
+<h1 class="title-four">this is title four.</h1> -->
+
+<div class="btop">
+  <p-dataTable [value]="cars" scrollable="true" scrollHeight="200px">
+    <p-header>列表</p-header>
+    <p-footer>有十条数据</p-footer>
+    <p-column field="vin" header="Vin"></p-column>
+    <p-column field="year" header="Year"></p-column>
+    <p-column field="brand" header="Brand"></p-column>
+    <p-column field="color" header="Color"></p-column>
+  </p-dataTable>
+
+
+  <h3>colgroup(横向跨列)</h3>
+  <hr>
+  <p-dataTable [value]="sales" sortField="brand" rowGroupMode="subheader" groupField="brand" expandableRowGroups="true" [sortableRowGroup]="false">
+    <p-headerColumnGroup>
+      <p-row>
+        <p-column header="Brand" rowspan="3"></p-column>
+        <p-column header="Sale Rate" colspan="4"></p-column>
+      </p-row>
+      <p-row>
+        <p-column header="Sales" colspan="2"></p-column>
+        <p-column header="Profits" colspan="2"></p-column>
+      </p-row>
+      <p-row>
+        <p-column header="Last Year"></p-column>
+        <p-column header="This Year"></p-column>
+        <p-column header="Last Year"></p-column>
+        <p-column header="This Year"></p-column>
+      </p-row>
+    </p-headerColumnGroup>
+
+    <p-column field="brand"></p-column>
+    <p-column field="lastYearSale"></p-column>
+    <p-column field="thisYearSale"></p-column>
+    <p-column field="lastYearProfit"></p-column>
+    <p-column field="thisYearProfit"></p-column>
+
+    <p-footerColumnGroup>
+      <p-row>
+        <p-column footer="Totals:" colspan="3"></p-column>
+        <p-column footer="$506,202"></p-column>
+        <p-column footer="$531,020"></p-column>
+      </p-row>
+    </p-footerColumnGroup>
+  </p-dataTable>
+
+  <h3>tree结构</h3>
+  <hr>
+  <p-tree [value]="tree"></p-tree>
+  <hr>
+  <!-- <p-tree [value]="files" draggableNodes="true" droppableNodes="true"></p-tree> -->
+  <p-tree [value]="files" draggableNodes="true" droppableNodes="true" draggableScope="a" droppableScope="c"></p-tree>
+
+</div>
