--- a/project/src/app/baToolBar/baToolBar.html
+++ b/project/src/app/baToolBar/baToolBar.html
@@ -1,69 +1,105 @@
 <!-- 查询 每一个图表。每一个组都要带索引位置不固定
-6.status:状态1，隐藏，不显示，2，禁用，不可点，3，启用可点，4，锁定。
+6.status:状态 1:隐藏，不显示，2:禁用，不可点，3:启用可点，4:锁定。
 -->
 
-<div [class.resize]="resize" class="content-top clearfix" maxHeight="100" [class.resize-alt]="!resize">
+<div class="toolbar" >
     <ng-container *ngFor='let its of dp;let i=index;'>
-        <div class="abox">
-            <ng-container *ngIf='its.childs'>
-                <ng-container *ngFor='let child of its.childs;let i=index;'>
-                    <ng-container *ngIf='child.childs'>
-                        <div class='a_tool_g'>
-                            <ng-container *ngFor='let co of child.childs;let i=index;'>
-                                <ng-container *ngIf='!co.childs'>
-                                    <ng-container *ngIf='co.isCollapse ===0'>
-                                        <div class='a_tool'>
-                                            <div class='a_n'>
-                                                <span class='{{co.icon}}' title='{{co.text}}'></span>
-                                                <span>{{co.text}}</span>
-                                                <!--<ng-container *ngIf='i === child.childs.length-1'>
-                                                    <ng-container *ngIf='co.isCollapse !==0'>
-                                                        <span>{{co.text}}下</span>
-                                                    </ng-container>
-                                                </ng-container>-->
-                                            </div>
-                                        </div>
+        <ng-container *ngIf='its.childs'>
+            <div class="tbgroup {{i == 0 ?'tbgroup-first': ''}}">
+                <div class="tbgroup-content">
+                    <ng-container *ngFor='let child of its.childs;let i=index;'>
+                        <ng-container *ngIf='child.childs'>
+                            <!-- 组 -->
+                            <div class='toolbar-item-group' [style.width]='child.width'>
+                                <ng-container *ngFor='let co of child.childs;let i=index;'>
+                                    <ng-container *ngIf='!co.childs'>
+                                        <ng-container *ngIf='co.isCollapse ===0'>
+                                            <ng-container *ngIf='co.style ==="1"'>
+                                                <div class='toolbar-item-a' (click)='getNode(co)' [ngClass]='co.status !==2?"disabled":""' [hidden]='co.status===0'>
+                                                    <span class='icons {{co.icon}} icon' title='{{co.text}}'></span>
+                                                    <span class='icon-text'>{{co.text}}</span>
+                                                </div>
+                                            </ng-container>
+                                            <ng-container *ngIf='co.style ==="2"'>
+                                                <div class='toolbar-item-b' (click)='getNode(co)' [ngClass]='co.status !==2?"disabled":""' [hidden]='co.status===0'>
+                                                    <span class='icons {{co.icon}} icon' title='{{co.text}}'></span>
+                                                    <span class='icon-text'>{{co.text}}</span>
+                                                </div>
+                                            </ng-container>
+                                        </ng-container>
+                                        <ng-container *ngIf='co.isCollapse ===1'>
+                                        </ng-container>
+                                    </ng-container>
+                                    <ng-container *ngIf='co.childs'>
+
                                     </ng-container>
                                 </ng-container>
+                            </div>
+                        </ng-container>
+                        <ng-container *ngIf='!child.childs'>
+                            <ng-container *ngIf='child.isCollapse ===0'>
+                                <ng-container *ngIf='child.style ==="1"'>
+                                    <div class='toolbar-item-a' (click)='getNode(child)' [ngClass]='co.status !==2?"disabled":""' [hidden]='child.status===0'>
+                                        <span class='icons {{child.icon}} icon' title='{{child.text}}'></span>
+                                        <span class='icon-text'>{{child.text}}</span>
+                                    </div>
+                                </ng-container>
+                                <ng-container *ngIf='child.style ==="2"'>
+                                    <div class='toolbar-item-b' (click)='getNode(child)' [ngClass]='child.status !==2?"disabled":""' [hidden]='child.status===0'>
+                                        <span class='icons {{child.icon}} icon' title='{{child.text}}'></span>
+                                        <span class='icon-text'>{{child.text}}</span>
+                                    </div>
+                                </ng-container>
+
                             </ng-container>
-                            <span class='rt'>{{child.name}}</span>
-                        </div>
-                    </ng-container>
-                    <ng-container *ngIf='!child.childs'>
-                        <ng-container *ngIf='child.isCollapse ===0'>
-                            <div class='a_tool' [ngClass]='child.status===2? "a_tool_dis":""'>
+                            <ng-container *ngIf='child.isCollapse ===1'>
+                            </ng-container>
+                            <!-- <ng-container *ngIf='child.isCollapse===1'>
+                        <ng-container *ngIf='!its.fl'>
+                                    <span class='ion-arrow-down-b'></span>
+                                </ng-container>
+                        </ng-container>
+                        <ng-container *ngIf='child.isCollapse === 0'>
+                            <div class='{{child.style}}' (click)='getNode(child)' [ngClass]='child.status !==2?"disabled":""' [hidden]='child.status===0'>
                                 <div class='a_n'>
                                     <span class='icons {{child.icon}}' title='{{child.text}}'></span>
-                                    <span>{{child.text}}</span>
+                                    <span class='tx' [style.display]='child.style==="a_tool"? "block":"none"'>{{child.text}}</span>
                                 </div>
                             </div>
                         </ng-container>
-                        <ng-container *ngIf='child.isCollapse!==0'>
-                            <div class='a_tool' [ngClass]='child.status===2? "a_tool_dis":""'>
+
+                        <ng-container *ngIf='child.isCollapse !== 0'>
+                            <div class='{{child.style}}' (click)='getNode(child)' [ngClass]='child.status !==2?"disabled":""' [hidden]='child.status===0'>
                                 <div class='a_n'>
                                     <span class='icons {{child.icon}}' title='{{child.text}}'></span>
-                                    <span (mouseover)='open(child)'>{{child.text}}</span>
+                                    <span class='tx' [style.display]='child.style==="a_tool"? "block":"none"'>{{child.text}}</span>
                                     <ul class='uls'>
-                                        <li class='lis'>{{child.text}}</li>
-                                    </ul>
+                                            <li class='lis'>{{child.text}}</li>
+                                        </ul>
                                 </div>
                             </div>
+                        </ng-container> -->
                         </ng-container>
                     </ng-container>
-                </ng-container>
-            </ng-container>
-            <ng-container *ngIf='!its.childs'>
-                <div class='a_tool'>
-                    <div class='a_n'>
-                        <span class='{{its.icon}}' title='{{its.text}}'></span>
-                        <span>{{its.text}}</span>
-                        <ng-container *ngIf='its.isCollapse !==0'>
-                            <span class='ion-arrow-down-b'>11</span>
-                        </ng-container>
-                    </div>
                 </div>
-            </ng-container>
-            <span class='rt'>{{its.name}}</span>
-        </div>
+                <div class='tbgroup-title'>
+                    <span class=''>{{its.text}}</span>
+                </div>
+            </div>
+        </ng-container>
+        <ng-container *ngIf='!its.childs'>
+            <!-- 一层 纯按钮-->
+            <!-- <div class='{{its.style}}' (click)='getNode(its)' [ngClass]='its.status !==2?"disabled":""' [hidden]='its.status===0'> -->
+            <!-- <div class='{{its.style}}' (click)='itemClick(its)' [ngClass]='its.status !==2?"disabled":""' [hidden]='its.status===0'>
+                <div class='a_n'>
+                    <span class='icons {{its.icon}}' title='{{its.text}}'></span>
+                    <span class='tx' [style.display]='its.style==="a_tool"? "block":"none"'>{{its.text}}</span>
+                    <ng-container *ngIf='its.isCollapse !==0'>
+                        <span class='ion-arrow-down-b'>11</span>
+                    </ng-container>
+                </div>
+                <i [hidden]="its.status !== 3" class="ion-locked"></i>
+            </div> -->
+        </ng-container>
     </ng-container>
 </div>
