--- a/project/src/app/baToolBar/baToolBar.scss
+++ b/project/src/app/baToolBar/baToolBar.scss
@@ -1,16 +1,11 @@
-// @import '../../sass/conf/conf';
-.content-top {
-    // $mainBgUrl: $assets-root + $images-root + 'sky-bg.jpg';
-    background:black;
-    width: 100%;
-    // padding: 12.5px 0px;
-    // margin-top: 30px;
+.toolbar {
+    background: #8a92fb;
+    width: 100%; 
     position: fixed;
     z-index: 903;
-    box-shadow: 2px 0 3px rgba(0, 0, 0, 0);
-    height: 80px;
-    min-width: 700px;
-    color: white;
+    box-shadow: 2px 0 3px rgba(29, 6, 235, 0);
+    padding: 0px;
+    height: 70px; 
     .dropdown-toggle::after {
         display: none;
     }
@@ -19,207 +14,76 @@
     }
 }
 
-.resize {
-    width: calc(100% - 50px);
+.tbgroup-first {
+    border-left: 1px solid rgba(150, 150, 150, 0.2);
 }
 
-.resize-alt {
-    width: calc(100% - 180px);
-}
-.gongjulan{
-    width: 100%;
-    height: 50px;
-    background: white;
-}
-// .dropdown-menu{
-//     width:30px;height:50px;padding:0px;margin:0px;background:pink;
-// }
-// :host /deep/ {
-    .btn-group{
-        margin:0px;
-        i{
-            position: absolute;
-            top: 0px;
-            font-size: 10px;
-        }
-    }
-    .dropdown-menu{
-        min-width: 7rem;
-        margin: 0px;
-        padding: 0px;
-        li{
-            padding: .3rem;
-            a{
-                width:100%;
-                display: inline-block;
-            }
-        }
-         li:last-child{
-             border-bottom: 0px;
-         }
- 
-     }
-    .btn{
-        padding: 0.5rem 0.6rem;
-        .groupname{
-            width: 20px;
-            height: 20px;
-            display: block;
-            
-        }
-    }
-    .btn-toolbar{
-        padding:0.3rem;
-        border:1px solid #ccc;
-        height:70px;
-        position: relative;
-        .btn{
-            position: relative;
-            .uls{width:90px;height:100%;padding:0.3rem;
-                z-index: 200;position: absolute;top: 32px;
-                background: #ccc;
-                color: black;
-                li{
-                    color: black !important;
-                    height: 20px;
-                    line-height: 20px;
-                    text-align: left;
-                    list-style:none;
-                }
-                li:hover{
-                    background: #ccc;
-                }
-            }
-        }  
-    }
-// }
-.abox{
-    border: 1px solid #ccc;
-    border-left-width: 0px;
-    min-width: 60px;
-    max-width: 307px;
-    padding:0.3rem;height:98%;width:100%;position:relative; 
+.tbgroup {
+    border-top: 0.1px solid rgba(150, 150, 150, 0.2);
+    border-bottom: 0.1px solid rgba(150, 150, 150, 0.2);
+    border-right: 0.5px solid rgba(150, 150, 150, 0.5);
+    height: 98%;
     float: left;
     position: relative;
-    .a_tool{
-        width:50px;
-        height: 50px;
-        // border-right: 1px solid red;
-        padding: 3px;
-        float: left;
-        margin-right: 3px;
-        position: relative;
-        .a_n{
-            width: 80%;
-            height: 60%;
-            margin: 2px auto;
-            text-align: center;
-        span{
-            display: block;
-        }
-        .icons{
-            width: 25px;
-            height: 25px;
-            font-size: 25px;
-            text-align: center;
-        }
-        .tx{
-            font-size: 10px;
-        } 
-        }  
-    .uls{
+    padding-top: 4px;
+    .tbgroup-content {
+        padding: 0 5px;
+    }
+    .tbgroup-title {
+        width: 100%;
+        background-color: rgba(150, 150, 150, 0.2);
         position: absolute;
-        left: 0px;
-        background: blue;
-        width: 140px;
-        padding: 4px 0px;
-        margin: 0px;
-        .lis{
-            line-height: 20px;
-            padding: 0px 8px;
-            text-align: left;
-            color: black;
-            list-style: none;
-            z-index: 100;
-        }
-        .lis:hover{
-            background: #ccc;
-        }
-    }  
+        bottom: 0px;
+        text-align: center;
+        font-size: 10px;
+        display: block;
     }
-    .a_tool:hover{
-        border: 1px solid #ccc;
-    }
+}
 
-    .rt{
-        position: absolute;
-        right: 5px;
-        bottom: 0px;
+.toolbar-item-group {
+    height: 90%;
+    position: relative;
+}
+
+.toolbar-item-a {
+    max-width: 70px;
+    height: 25px;
+    padding: 3px;
+    float: left;
+    margin-right: 3px;
+    position: relative;
+    color: white;
+    cursor: pointer;
+    .icon {
+        font-size: 15px;
+    }
+    .icon-text {
         font-size: 10px;
-        display: block;
-    }
-    .a_tool_dis{
-        color: gray;
-    }
-    .a_tool_g{
-        width: 170px;
-        height: 95%;
-        border: 1px solid #ccc;
-       float: left;
-       position: relative;
-       .rt{
-        position: absolute;
-        right: 5px;
-        bottom: 0px;
-        font-size: 10px;
-        display: block;
-    }
     } 
+}
 
-  .b_tool{
- width:50px;
- height: 27px;
-  padding: 3px;
-        float: left;
-        margin-right: 3px;
-        position: relative;
-        .uls{
-        position: absolute;
-        left: 0px;
-        top: 28px;
-        background: blue;
-        width: 140px;
-        padding: 4px 0px;
-        margin: 0px;
-        .lis{
-            line-height: 20px;
-            padding: 0px 8px;
-            text-align: left;
-            color: black;
-            list-style: none;
-            z-index: 100;
-        }
-        .lis:hover{
-            background: #ccc;
-        }
+
+.toolbar-item-b {
+    color: white;
+    max-width: 31px;
+    height: 35px;
+    cursor: pointer;
+    position: relative;
+    text-align: center;
+    display: inline-block;
+    .icon {
+        font-size: 25px;
+        margin-left: auto;
+        margin-right: auto;
+        line-height: 0%;
     }
-     .b_tool_g{
-        width: 170px;
-        height: 95%;
-        border: 1px solid #ccc;
-       float: left;
-       position: relative;
-       .rt{
-        position: absolute;
-        right: 5px;
-        bottom: 0px;
+    .icon-text {
         font-size: 10px;
-        display: block;
     }
-   }
-}
-.b_tool:hover{ border: 1px solid #ccc;}
 }
 
 
+.a_tool_dis {
+    color: gray;
+}
 
