添加观察者模式

--- a/project/src/app/home/home.component.html
+++ b/project/src/app/home/home.component.html
@@ -26,4 +26,6 @@
     </div>
   </div>
 </form>
-<h1 class='title-one'>测试</h1>
+<!-- 注册这个事件得到对应的结论-->
+<h1 class='title-one' [innerHtml]=' whatDo ? whatDo:"测试"'></h1>
+
