--- a/project/src/app/primeng/primeng.component.html
+++ b/project/src/app/primeng/primeng.component.html
@@ -1,10 +1,10 @@
 <!-- 测试scss用法 -->
-<!-- <h1 class="title-one">this is title one.</h1>
+<h1 class="title-one" [innerHtml]=' whatDo ? whatDo:"this is title one"'></h1>
 <h1 class="title-two">this is title two.</h1>
 <h1 class="title-three">this is title three.</h1>
-<h1 class="title-four">this is title four.</h1> -->
+<h1 class="title-four">this is title four.</h1>
 
-<div class="btop">
+<!-- <div class="btop">
   <p-dataTable [value]="cars" scrollable="true" scrollHeight="200px">
     <p-header>列表</p-header>
     <p-footer>有十条数据</p-footer>
@@ -54,7 +54,7 @@
   <hr>
   <p-tree [value]="tree"></p-tree>
   <hr>
-  <!-- <p-tree [value]="files" draggableNodes="true" droppableNodes="true"></p-tree> -->
+  <p-tree [value]="files" draggableNodes="true" droppableNodes="true"></p-tree>
   <p-tree [value]="files" draggableNodes="true" droppableNodes="true" draggableScope="a" droppableScope="c"></p-tree>
 
-</div>
+</div> -->
