--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -14,8 +14,9 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li routerLinkActive='actives'><a routerLink='/home'>Home</a></li>
-                <li routerLinkActive='actives'><a routerLink="/primeng">primeng</a></li>
+                <li routerLinkActive='actives'><a routerLink="/prime">primeng</a></li>
                 <li routerLinkActive='actives'><a routerLink="/toolbar">工具栏</a></li>
+                <li routerLinkActive='actives'><a routerLink="/linstenner">观察者模式</a></li>
                 <!-- <li><a href="#contact">Contact</a></li> -->
                 <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -34,11 +35,18 @@
                 <li><a href="../navbar/">Default</a></li>
                 <!-- <li><a href="../navbar-static-top/">Static top</a></li>
                 <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li> -->
+
             </ul>
+
         </div>
     </div>
-</nav>
 
+</nav>
+<div style="background:gray;">
+    <!-- 全局使用这个组件，并使用导出的事件名 -->
+    <app-cest (toDo)='toDoFn($event)'></app-cest>
+</div>
 <div class="container top">
+
     <router-outlet></router-outlet>
 </div>
