添加一些sass用法

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -46,7 +46,6 @@
     <!-- 全局使用这个组件，并使用导出的事件名 -->
     <app-cest (toDo)='toDoFn($event)'></app-cest>
 </div>
-<div class="container top">
-
+<div class="container">
     <router-outlet></router-outlet>
 </div>
