--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -5,9 +5,6 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
                 aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
-          <!-- <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span> -->
         </button>
             <a class="navbar-brand">PrimeNG(Angular4 UI库)</a>
         </div>
@@ -15,37 +12,25 @@
             <ul class="nav navbar-nav">
                 <li routerLinkActive='actives'><a routerLink='/home'>Home</a></li>
                 <li routerLinkActive='actives'><a routerLink="/prime">primeng</a></li>
-                <li routerLinkActive='actives'><a routerLink="/toolbar">工具栏</a></li>
+                <!-- <li routerLinkActive='actives'><a routerLink="/toolbar">工具栏</a></li> -->
                 <li routerLinkActive='actives'><a routerLink="/linstenner">观察者模式</a></li>
-                <!-- <li><a href="#contact">Contact</a></li> -->
-                <!-- <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li class="dropdown-header">Nav header</li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li> -->
+                <li routerLinkActive='actives'><a routerLink="/scroll">滚动条</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="../navbar/">Default</a></li>
-                <!-- <li><a href="../navbar-static-top/">Static top</a></li>
-                <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li> -->
-
             </ul>
-
         </div>
     </div>
 
 </nav>
-<div style="background:gray;">
-    <!-- 全局使用这个组件，并使用导出的事件名 -->
+
+<!-- <div style="background:gray;">
+    全局使用这个组件，并使用导出的事件名
     <app-cest (toDo)='toDoFn($event)'></app-cest>
-</div>
+</div> -->
+
+
+<ba-toolbar (toolbarItemClick)="toolbarItemClick($event)"></ba-toolbar>
 <div class="container">
     <router-outlet></router-outlet>
 </div>
