--- a/project/src/app/baToolBar/b.html
+++ b/project/src/app/baToolBar/b.html
@@ -49,6 +49,7 @@
                             </div>
                         </ng-container>
                         <ng-container *ngIf='child.isCollapse!==0'>
+                            <span>11</span>
                             <div class='b_tool' [ngClass]='child.status===2? "a_tool_dis":""'>
                                 <div class='b_n'>
                                     <span class='icons {{child.icon}}' title='{{child.text}}'></span>
