--- a/project/src/app/baToolBar/baToolBar.scss
+++ b/project/src/app/baToolBar/baToolBar.scss
@@ -1,11 +1,14 @@
+
 .toolbar {
-    background: #8a92fb;
-    width: 100%; 
+    background: #225896;
     position: fixed;
     z-index: 903;
     box-shadow: 2px 0 3px rgba(29, 6, 235, 0);
     padding: 0px;
-    height: 70px; 
+    height: 70px;
+    width: 100%;
+    min-width: 1100px;
+    margin-top: 51px;
     .dropdown-toggle::after {
         display: none;
     }
@@ -15,17 +18,17 @@
 }
 
 .tbgroup-first {
-    border-left: 1px solid rgba(150, 150, 150, 0.2);
+    border-left: 1px solid #ccc;
 }
 
 .tbgroup {
     border-top: 0.1px solid rgba(150, 150, 150, 0.2);
     border-bottom: 0.1px solid rgba(150, 150, 150, 0.2);
-    border-right: 0.5px solid rgba(150, 150, 150, 0.5);
+    border-right: 1px solid #ccc;
     height: 98%;
     float: left;
     position: relative;
-    padding-top: 4px;
+    // padding-top: 4px;
     .tbgroup-content {
         padding: 0 5px;
     }
@@ -43,10 +46,35 @@
 .toolbar-item-group {
     height: 90%;
     position: relative;
+    float: left;
+    border-left-color: #aaa;
+    border-right-color:#aaa; 
+    border-left-width: 0.1px;
+    border-left-style: dashed;
+    // border-right-color: #eee;
+    // border-right-width: 0.1px;
+    // border-right-style: solid;
+    .btn.btn-default{
+        border: none;
+        padding-left: 0px;
+    }
+    .btn.btn-default:hover{
+        background: none;
+    }
+    .dropdown-menu{
+        padding:3px 0px;
+        li{
+            line-height: 20px;
+            padding: 1px 5px;
+        }
+        li:hover{
+            background: #eee;
+        }
+    }
 }
 
 .toolbar-item-a {
-    max-width: 70px;
+    max-width: 80px;
     height: 25px;
     padding: 3px;
     float: left;
@@ -59,9 +87,12 @@
     }
     .icon-text {
         font-size: 10px;
-    } 
+    }
 }
 
+// .toolbar-item-a:hover {
+//     border: 1px solid rgba(150, 150, 150, 0.0);
+// }
 
 .toolbar-item-b {
     color: white;
@@ -83,7 +114,6 @@
 }
 
 
-.a_tool_dis {
+.toolbar-item_disable {
     color: gray;
 }
-
