--- a/project/src/app/home/home.component.html
+++ b/project/src/app/home/home.component.html
@@ -87,3 +87,15 @@
 <p>
   及地方机构
 </p>
+
+<app-toolbat>
+  <span>这个页面是我想要在模板之外添加的特殊内容</span>
+  <p>HOME页面</p>
+</app-toolbat>
+
+<button onChilks>点击</button>
+<div style="height:50px;overflow-y:scroll;" onChilks>
+  <div style="height:100px;">
+    滚动
+  </div>
+</div>
