--- a/project/src/app/toolbat/toolbat.component.html
+++ b/project/src/app/toolbat/toolbat.component.html
@@ -1,2 +1,8 @@
 
-<!-- <p-menubar [model]="items"></p-menubar> -->
+<div>
+    我是模板中的html
+    <span>接下来使用一个容器来装插入的html</span>
+    <div class="content">
+        <ng-content></ng-content>
+    </div>
+</div>
