--- a/project/src/app/primeng/primeng.component.scss
+++ b/project/src/app/primeng/primeng.component.scss
@@ -1,3 +1,4 @@
+@import '../app.component.scss';
 // 第一种、、有重复代码可以多使用方法调用
 // @mixin title($number, $deg: 90deg, $color1: #69b7eb, $color2: #b3dbd3, $color3: #f4d6db) {
 //     text-indent: 130px;
@@ -76,3 +77,12 @@ background: linear-gradient($deg, $color1, $color2, $color3);
 	-khtml-user-select: none;
 }
 
+.parent{
+    width: 100%;
+    height: 50px;
+    border: 1px solid #ccc;
+    overflow-y: scroll;
+    .child{
+
+    }
+}
