--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -15,6 +15,7 @@
                 <!-- <li routerLinkActive='actives'><a routerLink="/toolbar">工具栏</a></li> -->
                 <li routerLinkActive='actives'><a routerLink="/linstenner">观察者模式</a></li>
                 <li routerLinkActive='actives'><a routerLink="/scroll">滚动条</a></li>
+                <li routerLinkActive='actives'><a routerLink="/dragmove">拖拽</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="../navbar/">Default</a></li>
@@ -30,7 +31,7 @@
 </div> -->
 
 
-<ba-toolbar (toolbarItemClick)="toolbarItemClick($event)"></ba-toolbar>
+<!-- <ba-toolbar (toolbarItemClick)="toolbarItemClick($event)"></ba-toolbar> -->
 <div class="container">
     <router-outlet></router-outlet>
 </div>
