--- a/project/src/app/dragmove/dragmove.component.html
+++ b/project/src/app/dragmove/dragmove.component.html
@@ -9,4 +9,7 @@
   <div #dragHtml class="card-header">这里可以拖动窗口</div>
   <div class="card-block">这里不能拖动窗口</div>
 </div>
-<div ngDraggable class="card" (started)="onDragBegin($event)" (stopped)="onDragEnd($event)">Drag me!</div>
+<div ngDraggable class="card" (started)="onDragBegin($event)" (stopped)="onDragEnd($event)">Drag 
+  
+
+  
